# ecore-rust

./: .gitignore  Cargo.toml  README.md
doc/: search-index.js  settings.html
doc/lib/: all.html  index.html
doc/src/lib/: lib.rs.html
src/: lib.rs
tests/: lib.rs
