[package]
description = "ECore-Rust utility library for UML Modeling"
homepage = "henry.ai"
license = "Apache 2.0"
name = "ecore-rust"
version = "0.1.0"
authors = ["Henry Syahputra <syahputra.hsp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.3"
env_logger = "0.3"
